Removed unused stuff that makes users confues as all users, friends from profile page

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -77,10 +77,7 @@
                         <span class="nav-label">{{ user.username }}</span></a>
                 </li>
                 {% endif %}
-                <li class="nav-item active">
-                    <a class="nav-link" href="{%  url 'users:all_users' %}"><i class="fas fa-users"></i> <span
-                            class="nav-label">Users</span></a>
-                </li>
+                <li class="nav-item active pr-4"></li>
             </ul>
             <!-- -----------Dropdown------------ -->
             <div class="dropleft">
