--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -55,7 +55,7 @@
                             <div class="col-md-4 mb-3">
                                 <label for="validationServer013">First name</label>
                                 <input type="text" class="form-control" id="validationServer013"
-                                    placeholder="First name" value="{{user.firs_name }}" name="first_name">
+                                    placeholder="First name" value="{{user.first_name }}" name="first_name">
                             </div>
                             <div class="col-md-4 mb-3">
                                 <label for="validationServer023">Last name</label>
