Minified and optimized speed

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -5,24 +5,6 @@
 <html lang="en">
 
 <head>
-    <!-- Google Adsense -->
-    <script data-ad-client="ca-pub-2852400661142864" async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- End google Adsense -->
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176113474-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-176113474-1');
-    </script>
-
     <!-- Favicon Start -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'chat/favicons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'chat/favicons/favicon-32x32.png' %}">
@@ -35,14 +17,22 @@
     <meta name="msapplication-TileColor" content="#4cd137">
     <meta name="msapplication-config" content="{% static 'chat/favicons/browserconfig.xml' %}">
     <meta name="theme-color" content="#ffffff">
-
-    <!-- Favicon ends -->
-
-    <!-- Libraries -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-    <script async src="https://kit.fontawesome.com/78f2495e06.js" crossorigin="anonymous"></script>
     {% webpush_header %}
+
+    <!-- Font awesome -->
+    <script type="text/javascript">
+        (function () {
+            var css = document.createElement('link');
+            css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css';
+            css.rel = 'stylesheet';
+            css.type = 'text/css';
+            document.getElementsByTagName('head')[0].appendChild(css);
+        })();
+    </script>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{% block description %}{% endblock description %}">
@@ -50,10 +40,6 @@
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF2LM2J" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <header>
         <nav
             class="navbar navbar-main fixed-top navbar-dark navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand">
@@ -137,14 +123,14 @@
             <div class="modal-dialog modal-dialog-scrollable modal-xl">
                 <div class="modal-content">
                     <div style="margin-left: 70%">
-                        <button class="btn btn-rose float-right" onclick="closeModal('#installOrgachat')"><i
+                        <button class="btn btn-danger float-right" onclick="closeModal('#installOrgachat')"><i
                                 class="fas fa-times"></i></button>
                     </div>
                     <div class="modal-body">
                         <div class="install-card">
                             <div class="left flex">
                                 <br>
-                                <h1 class="title">Orgachat. Perfect for</h1>
+                                <h1 class="title">ORGACHAT, PERFECT FOR</h1>
                                 <br>
                                 <ul>
                                     <li>Managing teams</li>
@@ -212,6 +198,9 @@
         }
         // -------------------------END PWA-------------------------
     </script>
+    <!-- Google Adsense -->
+    <script data-ad-client="ca-pub-2852400661142864" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- End google Adsense -->
 </body>
-
 </html>
