--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -97,7 +97,7 @@
     </div>
 </div>
 <button class="btn btn-circle" id="extrasBtn" onclick="openModal('#extras')"><i
-        class="fas fa-comment-medical"></i></button>
+        class="fas fa-comment-dots"></i></button>
 
 <!-- ------------------------------------ -->
 <!-- Modals -->
