--- a/chat/static/chat/css/main.css
+++ b/chat/static/chat/css/main.css
@@ -1,15 +1,8 @@
-/* ------------ */
-/* COLORS */
-/* ------------- */
 /* ------Green-------- */
 /* Base Color: #4CD137 */
 
 /* ------Yellow-------- */
 /* #EBC12C  ( In logo ) */
-
-/* --------------- */
-/* MAIN SETUP */
-/* --------------- */
 
 * {
     margin: 0;
@@ -28,245 +21,7 @@ body {
 /* HEADER */
 /* --------------- */
 
-/* ----------Navbar---------- */
-.navbar-main {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-    background-color: #4cd137;
-}
-
-.nav-item {
-    margin-right: 25px
-}
-
-.scrolled-down {
-    -webkit-transform: translateY(-100%);
-    -ms-transform: translateY(-100%);
-    transform: translateY(-100%);
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-.scrolled-up {
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-/* --------------Dropdown-------------- */
-#mainDropdown {
-    width: 270px;
-    padding: 15px 5px 3px 5px;
-    top: 50px;
-    right: 10px;
-}
-
-
-
-/* ----------Modal------------- */
-.modal-header {
-    background-color: #4CD137;
-    color: white;
-}
-
-.install-card {
-    background-color: #ba2e5f;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    font-family: "Montserrat", sans-serif;
-    background: #c9366a;
-    box-shadow: 0 13px 22px 0 rgba(0, 0, 0, 0.18), inset 0 1px 3px 0 #e74880;
-    border-radius: 20px;
-    padding: 40px 60px;
-    width: 100%;
-    min-height: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.install-card .right {
-    padding-left: 20px;
-}
-
-.install-card .title {
-    text-transform: uppercase;
-    font-size: 30px;
-    line-height: 29px;
-    margin: 0;
-}
-
-/* ---------------TOAST---------------- */
-#toast {
-    visibility: hidden;
-    max-width: 50px;
-    height: 50px;
-    /*margin-left: -125px;*/
-    margin: auto;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    border-radius: 2px;
-
-    position: fixed;
-    /* z-index: 1; */
-    left: 0;
-    right: 0;
-    bottom: 30px;
-    font-size: 17px;
-    white-space: nowrap;
-    z-index: 1500;
-}
-
-#toast #toastImg {
-    width: 50px;
-    height: 50px;
-
-    float: left;
-
-    padding-top: 5px;
-    padding-bottom: 5px;
-
-    background-color: #111;
-    color: #fff;
-}
-
-#toast #toastDesc {
-
-
-    color: #fff;
-
-    padding: 16px;
-
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-#toast.show {
-    visibility: visible;
-    -webkit-animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 2s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 4s, fadeout 0.5s 4.5s;
-}
-
-@-webkit-keyframes fadein {
-    from {
-        bottom: 0;
-        opacity: 0;
-    }
-
-    to {
-        bottom: 30px;
-        opacity: 1;
-    }
-}
-
-@keyframes fadein {
-    from {
-        bottom: 0;
-        opacity: 0;
-    }
-
-    to {
-        bottom: 30px;
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes expand {
-    from {
-        min-width: 50px
-    }
-
-    to {
-        min-width: 350px
-    }
-}
-
-@keyframes expand {
-    from {
-        min-width: 50px
-    }
-
-    to {
-        min-width: 350px
-    }
-}
-
-@-webkit-keyframes stay {
-    from {
-        min-width: 350px
-    }
-
-    to {
-        min-width: 350px
-    }
-}
-
-@keyframes stay {
-    from {
-        min-width: 350px
-    }
-
-    to {
-        min-width: 350px
-    }
-}
-
-@-webkit-keyframes shrink {
-    from {
-        min-width: 350px;
-    }
-
-    to {
-        min-width: 50px;
-    }
-}
-
-@keyframes shrink {
-    from {
-        min-width: 350px;
-    }
-
-    to {
-        min-width: 50px;
-    }
-}
-
-@-webkit-keyframes fadeout {
-    from {
-        bottom: 30px;
-        opacity: 1;
-    }
-
-    to {
-        bottom: 60px;
-        opacity: 0;
-    }
-}
-
-@keyframes fadeout {
-    from {
-        bottom: 30px;
-        opacity: 1;
-    }
-
-    to {
-        bottom: 60px;
-        opacity: 0;
-    }
-}
-
+.navbar-main{z-index:1030;background-color:#4cd137}.nav-item{margin-right:25px}.scrolled-down{transform:translateY(-100%);transition:all .3s ease-in-out}.scrolled-up{transform:translateY(0);transition:all .3s ease-in-out}#mainDropdown{width:270px;padding:15px 5px 3px 5px;top:50px;right:10px}.modal-header{background-color:#4cd137;color:#fff}.install-card{background-color:#ba2e5f;color:#fff;display:flex;justify-content:center;align-items:center;flex-direction:row}.install-card .right{padding-left:20px}#toast{visibility:hidden;max-width:50px;height:50px;margin:auto;background-color:#333;color:#fff;text-align:center;border-radius:2px;position:fixed;left:0;right:0;bottom:30px;font-size:17px;white-space:nowrap;z-index:1500}#toast #toastImg{width:50px;height:50px;float:left;padding-top:5px;padding-bottom:5px;background-color:#111;color:#fff}#toast #toastDesc{color:#fff;padding:16px;overflow:hidden;white-space:nowrap}#toast.show{visibility:visible;-webkit-animation:fadein .5s,expand .5s .5s,stay 3s 1s,shrink .5s 2s,fadeout .5s 2.5s;animation:fadein .5s,expand .5s .5s,stay 3s 1s,shrink .5s 4s,fadeout .5s 4.5s}@-webkit-keyframes fadein{from{bottom:0;opacity:0}to{bottom:30px;opacity:1}}@keyframes fadein{from{bottom:0;opacity:0}to{bottom:30px;opacity:1}}@-webkit-keyframes expand{from{min-width:50px}to{min-width:350px}}@keyframes expand{from{min-width:50px}to{min-width:350px}}@-webkit-keyframes stay{from{min-width:350px}to{min-width:350px}}@keyframes stay{from{min-width:350px}to{min-width:350px}}@-webkit-keyframes shrink{from{min-width:350px}to{min-width:50px}}@keyframes shrink{from{min-width:350px}to{min-width:50px}}@-webkit-keyframes fadeout{from{bottom:30px;opacity:1}to{bottom:60px;opacity:0}}@keyframes fadeout{from{bottom:30px;opacity:1}to{bottom:60px;opacity:0}}
 /* ------------------ */
 /* REUSABLE */
 /* ------------------ */
@@ -310,108 +65,8 @@ h2:after {
     background-color: #EBC12C;
 }
 
-.btn-rose {
-    background-image: linear-gradient(-180deg, #ffc0db 3%, #e14f7c 97%);
-    box-shadow: 0 7px 17px 0 rgba(0, 0, 0, 0.24);
-    border-radius: 600px;
-    min-height: 60px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 7px;
-    cursor: pointer;
-    position: relative;
-}
-
-.btn-looping {
-    color: white;
-    background: red;
-    animation: myfirst 1.5s;
-    -moz-animation: myfirst 1.5s infinite;
-    /* Firefox */
-    -webkit-animation: myfirst 1.5s infinite;
-    /* Safari and Chrome */
-}
-
-@-moz-keyframes myfirst
-
-/* Firefox */
-    {
-    0% {
-        background: #4CD137;
-    }
-
-    50% {
-        background: #ff9f43;
-    }
-
-    100% {
-        background: #4CD137;
-    }
-}
-
-@-webkit-keyframes myfirst
-
-/* Safari and Chrome */
-    {
-    0% {
-        background: #4CD137;
-    }
-
-    50% {
-        background: #ff9f43;
-    }
-
-    100% {
-        background: #4CD137;
-    }
-}
-
-.btn-install {
-    flex: 1;
-    width: 100%;
-    background-image: linear-gradient(-180deg, #ffc21c 3%, #ea6e18 100%);
-    box-shadow: 0 0 4px 3px #ec6b17, inset 0 0 10px 0 #fdd41e;
-    border-radius: 600px;
-    min-height: 50px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.btn-install .btn-text {
-    padding: 10px 20px;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 26px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn-install .btn-icon {
-    height: 60px;
-    width: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 35px;
-    opacity: 0.3;
-    background: #e5690f;
-    color: white;
-    text-shadow: 0 2px 4px black;
-}
-
-.btn-circle {
-    border-radius: 50%;
-}
-
+.btn-install{flex:1;width:100%;background-image:linear-gradient(-180deg,#ffc21c 3%,#ea6e18 100%);box-shadow:0 0 4px 3px #ec6b17,inset 0 0 10px 0 #fdd41e;border-radius:600px;min-height:50px;display:flex;flex-direction:row;justify-content:center;align-items:center;overflow:hidden}.btn-install .btn-text{padding:10px 20px;text-transform:uppercase;font-weight:700;font-size:26px;display:flex;justify-content:center;align-items:center}.btn-install .btn-icon{height:60px;width:60px;display:flex;justify-content:center;align-items:center;font-size:35px;opacity:.3;background:#e5690f;color:#fff;text-shadow:0 2px 4px #000}.btn-circle{border-radius:50%}
 /* ----------I--------- */
-.i-xl {}
-
 .i-lg {
     font-size: 40px;
 }
@@ -419,8 +74,6 @@ h2:after {
 .i-md {
     font-size: 25px;
 }
-
-.i-sm {}
 
 /* ---------Displaying-------- */
 .hide {
@@ -432,33 +85,4 @@ h2:after {
 /* -------------------------------- */
 /* Media queries */
 /* -------------------------------- */
-@media screen and (max-width: 590px) {
-    .nav-label {
-        display: none;
-    }
-
-    .nav-link {
-        font-size: 1.4em;
-    }
-
-    .nav-item {
-        margin-left: 10px;
-    }
-}
-
-@media screen and (max-width: 990px) {
-    .install-card .left.flex {
-        margin-left: 20px;
-    }
-
-    .btn-install .btn-icon {
-        height: 100px
-    }
-}
-
-@media screen and (max-width: 530px) {
-    .install-card {
-        display: block;
-        display: block;
-    }
-}
+@media screen and (max-width:590px){.nav-label{display:none}.nav-link{font-size:1.4em}.nav-item{margin-left:10px}}@media screen and (max-width:990px){.install-card .left.flex{margin-left:20px}.btn-install .btn-icon{height:100px}}@media screen and (max-width:530px){.install-card{display:block;display:block}}
